test/spec_vectors/simd_i32x4_arith/ok/module_12.wat
(module (func (export "add-sub") (param v128 v128 v128) (result v128) (i32x4.add (i32x4.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-add") (param v128 v128 v128) (result v128) (i32x4.mul (i32x4.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-sub") (param v128 v128 v128) (result v128) (i32x4.mul (i32x4.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "sub-add") (param v128 v128 v128) (result v128) (i32x4.sub (i32x4.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "add-neg") (param v128 v128) (result v128) (i32x4.add (i32x4.neg (local.get 0)) (local.get 1))) (func (export "mul-neg") (param v128 v128) (result v128) (i32x4.mul (i32x4.neg (local.get 0)) (local.get 1))) (func (export "sub-neg") (param v128 v128) (result v128) (i32x4.sub (i32x4.neg (local.get 0)) (local.get 1))))