test/spec_vectors/simd_i32x4_arith/fail/module_8.wat
(module (func $i32x4.sub-1st-arg-empty (result v128) (i32x4.sub (v128.const i32x4 0 0 0 0))))